# Soundboard

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: GUI.h  audio.h  globals.h  sound.h  utils.h  validateFiles.h
src/: GUI.cpp  audio.cpp  globals.cpp  main.cpp  sound.cpp  utils.cpp  validateFiles.cpp
